@@ -1,16 +1,20 @@
 2/6/2016 1.2.2.0
-
+ 
     user visible changes client:
+    * Fixed the progress count when creating sync sub-folders
     * sync command batch file creates sync folder manifest before and after it does it's work
     * copy command batch file creates sync folder manifest before it does it's work
     * Allow multiple guids per IID
     * New options for Robocopy to reduce verbosity
     * PlatformSpecificHelperMac.unlock will print its output to /dev/null because we do not care for the error message if the items being unlocked do not exists
-    * utils.folder_listing adds comments with date the manifest was created and the folder(s_ being manifested
+    * utils.folder_listing adds comments with date the manifest was created and the folder(s) being manifested
+    * Fixed ls command to properly handle missing folder and report them in the output
 
     programmer visible changes:
     * removed readline and colorama from test_import - they are needed only for interactive mode and should not create an error on compilation.
     * New functions InstlClient.create_folder_manifest_command  InstlClient.create_sync_folder_manifest_command
+    * Fixed InstlMisc to properly count progress and not display a message about "curr_progress != actual_progress" which was wrong
+    * Fixed utils.max_widths to handle empty lists
 
 3/1/2016 1.1.1.0
 
